# Devops_Practice

./: .github-ci.yml  README.md  docker-compose.yml
app/: Dockerfile  pyproject.toml
app/devops/: main.py
