[tool.poetry]
name = "devops"
version = "0.1.0"
description = ""
authors = ["Dasha <ketrin_night@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-app = "devops.main:main"
